ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: academyio-ingress
  namespace: academyio
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bff-service
                port:
                  number: 80
